security/kyverno/require-non-root.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: cloudcart-require-non-root
  annotations:
    policies.kyverno.io/title: Require non-root containers
    policies.kyverno.io/category: CloudCart Platform Guardrails
    policies.kyverno.io/severity: high
spec:
  validationFailureAction: Audit
  background: true
  rules:
    - name: pods-must-run-as-non-root
      match:
        any:
          - resources:
              kinds:
                - Pod
              namespaces:
                - cloudcart
      validate:
        message: "CloudCart pods must set spec.securityContext.runAsNonRoot=true."
        pattern:
          spec:
            securityContext:
              runAsNonRoot: true
